syntax = "proto3";
package sim.dump;

message Synchronized {

    uint64 componentID = 1;
    double timeStepSize = 2;
    double deltaStartTime = 3;
    double nextExecTime = 4;
    double lastTimeStep = 5;

}


message StopCondition {

    enum StopCode {
        NONE = 0;
        OBJECTIVES_MISSED = 1;
        OBJECTIVES_REACHED = 2;
        SIM_ENDED = 3;
    };

    uint64 id = 1;
    StopCode code = 2;

}


message BasicTimer {

    uint64 timerID = 1;
    double time = 2;
    double stepSize = 3;
    double startTime = 4;

}


message SynchronizedTimer {

    uint64 timerID = 1;
    double acceleration = 2;
    double startTime = 3;
    double refTime = 4;
    uint64 steps = 5;

}



message TimeIsUp {

    uint64 componentID = 1;
    uint64 stopConditionID = 2;
    double stopTime = 3;
    double lastTime = 4;

}


message Loop {

    enum Status {
        INITIALIZED = 0;
        RUNNING = 1;
        STOPPED = 2;
    }

    uint64 id = 1;
    Status status = 2;
    bool stop = 3;
    repeated uint64 components = 4;
    repeated uint64 stopConditions = 5;
    uint64 timer = 6;

}

message Simulation {

    Loop loop = 1;

}